--- a/ZARA/ZARA/Hwangho/Sources/Hwangho.storyboard
+++ b/ZARA/ZARA/Hwangho/Sources/Hwangho.storyboard
@@ -35,7 +35,9 @@
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-QI-Dmu">
                                                 <rect key="frame" x="337" y="8" width="24" height="24"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" image="icHeart"/>
+                                                <state key="selected" image="icHeart"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
